--- a/rust/polylines/Makefile
+++ b/rust/polylines/Makefile
@@ -1,2 +1,2 @@
 run:
-	RUSTFLAGS="-C link-args=--import-memory" cargo build --target=wasm32-unknown-unknown --release
+	cargo build --target=wasm32-unknown-unknown --release
